# agente-retornar

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARQUITECTURA.md  CASOS_DE_PRUEBA.md  DOCUMENTACION_TECNICA.md  MODELO_DE_DATOS.md
scripts/: demo_classifier.py  generate_key.py  init_db.py  run_local.py  send_webhook_demo.py
src/: __init__.py  settings.py
src/adapters/sqlite/: __init__.py  encryption.py  repository.py  schema.sql
src/adapters/whatsapp/: __init__.py  client.py  webhook.py
src/api/: __init__.py  app.py
src/application/: __init__.py  conversation_service.py
src/classifier/: __init__.py  azure_client.py  classify.py  config.py  models.py  offline_client.py  policy.py  preprocessor.py  prompts.py  risk_detector.py
src/domain/: __init__.py  models.py
src/ports/: __init__.py  messaging.py  repository.py
tests/: test_api_e2e.py  test_classifier.py  test_evaluation_matrix.py  test_preprocessor.py  test_risk_detector.py  test_whatsapp_client.py
tests/fixtures/: mensajes_prueba.json
wa_bridge/: index.js  package-lock.json  package.json
