[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "clinica-retornar-classifier"
version = "0.1.0"
description = "Clasificador local de mensajes WhatsApp para Clinica Retornar"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "python-dotenv>=1.0,<2",
  "langdetect>=1.0.9,<2",
  "rich>=13.9,<15",
  "langchain-openai>=0.2.8,<1",
  "tenacity>=9.0,<10",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "httpx>=0.27,<1",
  "aiosqlite>=0.20,<1",
  "cryptography>=43,<47",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=src.classifier --cov-report=term-missing"
